# informatics

./: ConsoleApplication3.cpp  _1.py  dz3  dz3_27.05.2026  dz4 c++ 31.05.2026.cpp  dz4 c++ 31.05.2026.sln  dz4 c++.cpp  dz4.sln  dz5.cpp  dz6.cpp  dz7_1.py  dz7_1_12.06.2026.py  dz7_2.py  dz7_2_10.06.2026.py  dz7_6.py  dz7_6_12.06.2026.py  dz7_9.py  dz7_9_10.06.2026.py  lr_n2.py  main.cpp  Лабораторная работа №2  .sln  Лабораторная работа №2.cpp  Практика 4  №1.sln
Лабораторная работа №4/: Инфа Практика 7.sln  инфа 2 практика 7.sln  инфа1.py  инфа2.py
ООП/: CMakeLists.txt  toolchain.cmake
ООП/res/: platformer.tmx
ООП/srt/: GameScene.cpp  GameScene.h
лабараторная работа 3/: main.cpp
