cmake_minimum_required(VERSION 3.28)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)





project(CMakeSFMLProject LANGUAGES CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
option(BUILD_SHARED_LIBS "Build shared libraries" OFF)

include(FetchContent)
FetchContent_Declare(SFML
    GIT_REPOSITORY https://github.com/SFML/SFML.git
    GIT_TAG 2.6.x
    GIT_SHALLOW ON
    EXCLUDE_FROM_ALL
    SYSTEM)
FetchContent_MakeAvailable(SFML)

add_executable(main 
    src/main.cpp 
    src/tinyxml2.h
    src/tinyxml2.cpp
    src/GameView.cpp
    src/TmxLevel.h
    src/GameScene.cpp
    src/main.cpp
    src/GameView.h
    src/GameScene.h
    src/TmxLevel.cpp
)

if(MINGW OR WIN32)
    target_link_libraries(main PRIVATE sfml-graphics -static-libgcc -static-libstdc++ -static)
endif()


if(NOT MINGW)
    target_link_libraries(main PRIVATE sfml-graphics)
endif()

# Set C++ standard
target_compile_features(main PRIVATE cxx_std_17)

# Copy OpenAL DLL if on Windows
if(WIN32)
    add_custom_command(
        TARGET main
        COMMENT "Copy OpenAL DLL"
        PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:main>
        VERBATIM)
endif()
